[bugfix] hide overflow text

--- a/app/javascript/flavours/glitch/styles/gts/status/status-account.scss
+++ b/app/javascript/flavours/glitch/styles/gts/status/status-account.scss
@@ -3,4 +3,6 @@
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 10px;
+    overflow: hidden;
+    text-overflow: clip;
 }
